--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,10 +16,18 @@ spring:
   resources: # 指定静态资源的路径
     static-locations: classpath:/static/,classpath:/templates/,classpath:/layui/,file:${file.image-path}
   datasource:
-    #服务器数据库
-    url: jdbc:mysql:///alex_for_dtu?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/reggie?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: admin
-    driver-class-name: com.mysql.jdbc.Driver
     #使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
+mybatis-plus:
+  configuration:
+    #address_book->AddressBook
+    #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
+    map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    db-config:
+      id-type: ASSIGN_ID
