--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring.thymeleaf.prefix: classpath:/templates/
 spring:
   #dev|test|pro
   profiles:
-    active: dev
+    active: pro
   #修改tomcatĬ最大文件上传大小
   servlet:
     multipart:
