--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -1,4 +1,3 @@
-
 #打印sql语句
 #mybatis.configuration.log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
@@ -19,7 +18,7 @@ spring:
     static-locations: classpath:/static/,classpath:/templates/,classpath:/layui/,file:${file.image-path}
   datasource:
     #服务器数据库
-    url: jdbc:mysql://36.139.45.250:7404/reggie?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://36.139.45.250:7404/dtudatabase?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: MeiFen
     password: 40f6d445552fba55a84a91f16c3069ca
     driver-class-name: com.mysql.jdbc.Driver
